Add updating of task status and task assignments. Refine schemas
